<resources>
    <string name="app_name">Salad bowl</string>
    <string name="todo">todo\n</string>
    <string name="title">Название</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="description">Описание</string>
    <string name="Time">Время</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="salad">Salad</string>
    <string name="error_input_count">Title is missing</string>
    <string name="add_photo">Добавить фото</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_text">Введите название</string>
    <string name="test">Введите название</string>
    <string name="delete_recipe">Удалить Рецепт</string>
    <string name="exactly">Вы уверены, что хотите удалить этот рецепт?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>