<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".cleancode.application.presentation.createNewRecipe.CreateRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/saladImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/salad" />

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/AddImageView_btn"
                android:text="@string/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/mainTextColor"
                android:padding="10dp"
                android:textColor="@color/mainBackgroundColor"
                android:textSize="16sp"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay"
                app:strokeColor="@color/mainTextColor" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/title"
                android:textColorHint="@color/mainTextColor"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/mainTextColor"
                app:counterMaxLength="20"
                app:counterTextColor="@color/mainTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainTextColor"
                app:errorEnabled="true"
                app:errorIconTint="@color/mainTextColor"
                app:helperText="Title"
                app:helperTextTextColor="@color/mainTextColor"
                app:hintTextColor="@color/mainTextColor"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_fld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/ingredients"
                android:textColorHint="@color/mainTextColor"
                app:boxStrokeColor="@color/mainTextColor"
                app:counterTextColor="@color/mainTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainTextColor"
                app:errorIconTint="@color/mainTextColor"
                app:helperText="ingredients"
                app:helperTextTextColor="@color/mainTextColor"
                app:hintTextColor="@color/mainTextColor"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredients_Fld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/description"
                android:textColorHint="@color/mainTextColor"
                app:boxStrokeColor="@color/mainTextColor"
                app:counterTextColor="@color/mainTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainTextColor"
                app:errorIconTint="@color/mainTextColor"
                app:helperText="description"
                app:helperTextTextColor="@color/mainTextColor"
                app:hintTextColor="@color/mainTextColor"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_Fld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/mainTextColor"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/mainBackgroundColor"
                android:textSize="16sp"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay"
                app:strokeColor="@color/mainTextColor" />


            <Button
                android:id="@+id/cancelButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/mainTextColor"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/mainBackgroundColor"
                android:textSize="16sp"
                app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay"
                app:strokeColor="@color/mainTextColor" />


        </LinearLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>